# support-ticket-analysis

./: .gitignore  README.md  docker-compose.yml  sample_tickets.csv
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: analysis.py  tickets.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/prompts/: __init__.py  ticket_analysis.py
backend/app/schemas/: analysis.py  ticket.py
backend/app/services/: analysis_service.py  llm_service.py  ticket_service.py
backend/migrations/: env.py
backend/migrations/versions/: 4dc1b9d4bf72_create_ticket_tables.py  abc123def456_add_status_to_analysis_runs.py
backend/tests/: conftest.py  test_analysis_api.py  test_tickets_api.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/AnalysisRunDetails/: AnalysisRunDetails.css  AnalysisRunDetails.tsx
frontend/src/components/AnalysisRunsGrid/: AnalysisRunsGrid.css  AnalysisRunsGrid.tsx
frontend/src/components/AnalyzedTicketsGrid/: AnalyzedTicketsGrid.css  AnalyzedTicketsGrid.tsx
frontend/src/components/ProcessingTicketsGrid/: ProcessingTicketsGrid.css  ProcessingTicketsGrid.tsx
frontend/src/components/ReadyToAnalyzeGrid/: ReadyToAnalyzeGrid.css  ReadyToAnalyzeGrid.tsx
frontend/src/components/TicketForm/: TicketForm.css  (+1 more)
frontend/src/store/: analyzedTicketStore.ts  ticketStore.ts
frontend/src/types/: api.ts  store.ts
